--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <i class="fa-solid fa-cloud-bolt"></i>
+  <div class="button-container">
+    <button id="button">START </button>
+  </div>
 
   <!-- Script-->
   <script src="script.js"></script>  
