--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Template</title>
+  <title>Picture-In-Picture</title>
   <link rel="icon" type="img/png" href="/favicon-16x16.png">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<!-- Video -->
+  <video id="video" controls height="360" width="640" hidden></video>
+<!-- Button -->
   <div class="button-container">
-    <button id="button">START </button>
+    <button id="button">START</button>
   </div>
 
   <!-- Script-->
